--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,13 +73,13 @@
                         </div>
 
                         <div class="content">
-                            <h2>Hye,I'm Aditya Raj Gupta & I'm a <span id="typing2"></span></h2><br>
+                            <h2>Hye,I'm Mahesh Sulegai & I'm a <span id="typing2"></span></h2><br>
                             <p id="data">I would describe myself as a collaborative and solution-driven software engineer 
                                 with a good lebel of experience working with designers, developers, and programmers
-                                holding a degree in Master Of Computer Application from L.N.C.T University </p><br>
+                                holding a degree in Master Of Computer Application from Kristu Jayanti University </p><br>
                                 <p>I've already contributed to over a half dozen projects and assisted with managing 
                                 a project for one of our firm's long-time clients. <br>
-                                And over the last year, I Make several project  using C, C++, Python, JavaScript, HTML, CSS, Sql, django.
+                                And over the last year, I Make several project  using C, C++, Python, JavaScript, HTML, CSS, Sql.
                                 
                             </p>
                         </div>
